Fix comment name

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -109,7 +109,7 @@ services:
   # --------------- --------------------- ---------------
 
 volumes:
-  # --------------- Development Secondary ---------------
+  # --------------- Development Principal ---------------
   development_principal_mysql:
   development_principal_redis:
   development_principal_rabbitmq:
