--- a/server/development/principal/nginx.conf
+++ b/server/development/principal/nginx.conf
@@ -1,10 +1,7 @@
-upstream rails_app {  
-   server development_principal_web:3000;
-} 
 server {
    # define your domain  
     listen 80;
-    server_name localhost;
+    server_name localhost dev.obras.com www.dev.obras.com;
 
    # define the public application root  
    root   $RAILS_ROOT/public;  
@@ -44,6 +41,6 @@ server {
       proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;         
       proxy_set_header Host $http_host;    
       proxy_redirect off;    
-      proxy_pass http://rails_app;  
+      proxy_pass http://development_principal_web:3000;  
    }
 }
