--- a/server/development/secondary/nginx.conf
+++ b/server/development/secondary/nginx.conf
@@ -1,10 +1,7 @@
-upstream rails_app {  
-   server development_secondary_web:3000;
-} 
-server {  
+server {
    # define your domain  
-    listen 81;
-    server_name localhost;
+    listen 80;
+    server_name localhost hom.obras.com www.hom.obras.com;
 
    # define the public application root  
    root   $RAILS_ROOT/public;  
@@ -43,7 +40,7 @@ server {
       proxy_set_header  X-Real-IP  $remote_addr;    
       proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;         
       proxy_set_header Host $http_host;    
-      proxy_redirect off;    
-      proxy_pass http://rails_app;  
+      proxy_redirect off;
+      proxy_pass http://development_secondary_web:3000;  
    }
 }
