--- a/DockerFile.nginx
+++ b/DockerFile.nginx
@@ -18,6 +18,10 @@ COPY public public/
 # Copy Nginx config template
 COPY nginx.conf /tmp/docker.nginx
 
+# Copy SSL Key
+COPY server/development/principal/cert.pem /etc/nginx/certs/cert.pem
+COPY server/development/principal/key.pem /etc/nginx/certs/key.pem
+
 # substitute variable references in the Nginx config template for real values from the environment
 # put the final config in its place
 RUN envsubst '$RAILS_ROOT' < /tmp/docker.nginx > /etc/nginx/conf.d/default.conf
