--- a/server/development/principal/nginx.conf
+++ b/server/development/principal/nginx.conf
@@ -9,9 +9,10 @@ server {
   # define the public application root  
   root   $RAILS_ROOT/public;  
   index  index.html;
+
   # define where Nginx should write its logs  
-  access_log $RAILS_ROOT/log/nginx.access.log;  
-  error_log $RAILS_ROOT/log/nginx.error.log;   
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log;
 
   # deny requests for files that should never be accessed  
   location ~ /\. {    
@@ -24,7 +25,7 @@ server {
   # serve static (compiled) assets directly if they exist (for rails production)  
   location ~ ^/(assets|images|javascripts|stylesheets|swfs|system)/   {    
     try_files $uri @rails;     
-    access_log off;    
+    access_log on;    
     gzip_static on; 
     # to serve pre-gzipped version     
     expires max;    
@@ -57,9 +58,10 @@ server {
   # define the public application root  
   root   $RAILS_ROOT/public;  
   index  index.html;
+
   # define where Nginx should write its logs  
-  access_log $RAILS_ROOT/log/nginx.access.log;  
-  error_log $RAILS_ROOT/log/nginx.error.log;   
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log;
 
   # deny requests for files that should never be accessed  
   location ~ /\. {    
@@ -72,7 +74,7 @@ server {
   # serve static (compiled) assets directly if they exist (for rails production)  
   location ~ ^/(assets|images|javascripts|stylesheets|swfs|system)/   {    
     try_files $uri @rails;     
-    access_log off;    
+    access_log on;    
     gzip_static on; 
     # to serve pre-gzipped version     
     expires max;    
