Blocker IP in Nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,9 @@ server {
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
 
+  # block IP
+  include /etc/nginx/ip_blocker.conf;
+
   # deny requests for files that should never be accessed  
   location ~ /\. {    
     deny all;  
@@ -62,6 +65,9 @@ server {
   # define where Nginx should write its logs  
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
+
+  # block IP
+  include /etc/nginx/ip_blocker.conf;
 
   # deny requests for files that should never be accessed  
   location ~ /\. {    
@@ -113,6 +119,9 @@ server {
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
 
+  # block IP
+  include /etc/nginx/ip_blocker.conf;
+
   # deny requests for files that should never be accessed  
   location ~ /\. {    
     deny all;  
@@ -161,6 +170,9 @@ server {
   # define where Nginx should write its logs  
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
+
+  # block IP
+  include /etc/nginx/ip_blocker.conf;
 
   # deny requests for files that should never be accessed  
   location ~ /\. {    
