--- a/DockerFile.nginx
+++ b/DockerFile.nginx
@@ -22,6 +22,9 @@ COPY nginx.conf /tmp/docker.nginx
 COPY server/cert.pem /etc/nginx/certs/cert.pem
 COPY server/key.pem /etc/nginx/certs/key.pem
 
+# IP blocker
+COPY server/ip_blocker.conf /etc/nginx/ip_blocker.conf
+
 # substitute variable references in the Nginx config template for real values from the environment
 # put the final config in its place
 RUN envsubst '$RAILS_ROOT' < /tmp/docker.nginx > /etc/nginx/conf.d/default.conf
