--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -106,6 +106,11 @@ services:
       - 443:443 
     volumes:
       - ./log/nginx:/var/log/nginx
+  mailcatcher:
+    image: yappabe/mailcatcher
+    ports:
+      - "1025:1025"
+      - "1080:1080"
   # --------------- --------------------- ---------------
 
 volumes:
