--- a/server/development/secondary/nginx.conf
+++ b/server/development/secondary/nginx.conf
@@ -4,7 +4,7 @@ upstream secondary {
 server {
   # define your domain  
   listen 80;
-  server_name localhost hom.obras.com;
+  server_name hom.obras.com;
 
   # define the public application root  
   root   $RAILS_ROOT/public;  
@@ -53,7 +53,7 @@ server {
 }
 server {
   listen 443 ssl;
-  server_name localhost hom.obras.com;
+  server_name hom.obras.com;
 
   ssl_certificate /etc/nginx/certs/cert.pem;
   ssl_certificate_key /etc/nginx/certs/key.pem;
