--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -14,11 +14,15 @@ services:
     extends:
       file: server/development/principal/mysql.yml
       service: mysql
+    networks:
+      - principal
 
   development_principal_redis:
     extends:
       file: server/development/principal/redis.yml
       service: redis
+    networks:
+      - principal
 
   development_principal_sidekiq:
     build: .
@@ -27,13 +31,8 @@ services:
       service: sidekiq
     env_file:
       - server/development/principal/sidekiq.env
-
-  #development_principal_rabbitmq:
-  #  extends:
-  #    file: server/development/principal/rabbitmq.yml
-  #    service: rabbitmq
-  #  env_file:
-  #    - server/development/principal/rabbitmq.env
+    networks:
+      - principal
 
   development_principal_web:
     build: .
@@ -46,51 +45,8 @@ services:
       development_principal_redis: {"condition":"service_healthy"}
       development_principal_sidekiq: {"condition":"service_healthy"}
       development_principal_mysql: {"condition":"service_healthy"}
-      #development_principal_rabbitmq: {"condition":"service_healthy"}
-
-  # --------------- --------------------- ---------------
-
-  # --------------- Development Secondary ---------------
-  development_secondary_mysql:
-    env_file:
-      - server/development/secondary/mysql.env
-    extends:
-      file: server/development/secondary/mysql.yml
-      service: mysql
-
-  development_secondary_redis:
-    extends:
-      file: server/development/secondary/redis.yml
-      service: redis
-
-  development_secondary_sidekiq:
-    build: .
-    extends:
-      file: server/development/secondary/sidekiq.yml
-      service: sidekiq
-    env_file:
-      - server/development/secondary/sidekiq.env
-
-  #development_secondary_rabbitmq:
-  #  extends:
-  #    file: server/development/secondary/rabbitmq.yml
-  #    service: rabbitmq
-  #  env_file:
-  #    - server/development/secondary/rabbitmq.env
-
-  development_secondary_web:
-    build: .
-    extends:
-      file: server/development/secondary/web.yml
-      service: web
-    env_file:
-      - server/development/secondary/web.env
-    depends_on:
-      development_secondary_redis: {"condition":"service_healthy"}
-      development_secondary_sidekiq: {"condition":"service_healthy"}
-      development_secondary_mysql: {"condition":"service_healthy"}
-   #   development_secondary_rabbitmq: {"condition":"service_healthy"}
-
+    networks:
+      - principal
   # --------------- --------------------- ---------------
 
   # --------------- ------ Shared ------- ---------------
@@ -100,19 +56,18 @@ services:
       dockerfile: DockerFile.nginx
     depends_on:
       - development_principal_web
-      - development_secondary_web
+
     ports:
       - 80:80
       - 443:443 
     volumes:
       - ./log/nginx:/var/log/nginx
-  mailcatcher:
-    image: yappabe/mailcatcher
-    ports:
-      - "1025:1025"
-      - "1080:1080"
+    networks:
+      - principal
   # --------------- --------------------- ---------------
 
 volumes:
   development_principal:
-  development_secondary:
+
+networks:
+  principal:
