--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,15 @@ services:
     extends:
       file: server/development/principal/mysql.yml
       service: mysql
+    networks:
+      - principal
 
   development_principal_redis:
     extends:
       file: server/development/principal/redis.yml
       service: redis
+    networks:
+      - principal
 
   development_principal_sidekiq:
     build: .
@@ -27,6 +31,8 @@ services:
       service: sidekiq
     env_file:
       - server/development/principal/sidekiq.env
+    networks:
+      - principal
 
   development_principal_web:
     build: .
@@ -39,6 +45,8 @@ services:
       development_principal_redis: {"condition":"service_healthy"}
       development_principal_sidekiq: {"condition":"service_healthy"}
       development_principal_mysql: {"condition":"service_healthy"}
+    networks:
+      - principal
   # --------------- --------------------- ---------------
 
   # --------------- ------ Shared ------- ---------------
@@ -54,7 +62,12 @@ services:
       - 443:443 
     volumes:
       - ./log/nginx:/var/log/nginx
+    networks:
+      - principal
   # --------------- --------------------- ---------------
 
 volumes:
   development_principal:
+
+networks:
+  principal:
